Angela fixed spacing between events card on events page

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -10,6 +10,7 @@
 .event-card {
   padding: 10px;
   padding-left: 15px;
+  margin-top: 0;
 }
 .event-card .event-card-content {
   margin: 0;
